# serializer version: 1
# name: test_delete_contact_on_http_status_error[brevo-api-http-error-500]
  'Brevo API: Response with status_code=500'
# ---
# name: test_delete_contact_request_error[brevo-api-request-error-connection-timed-out]
  'Brevo API: Request failed: Connection timed out'
# ---
